package edu.hitsz.observer;

/**
 * @author qingzhengyu1111@outlook.com
 * @date 2023/4/20 20:34
 */
public interface Observer {
    public void update();
}
